[tool.poetry]
name = "ai-seo-bot"
version = "0.1.0"
description = "Multi-agent AI SEO bot for generating and curating conversational content"
authors = ["Ty Fiero <tyfierodev@gmail.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.26.4"
chromadb = "^0.4.0"
pyyaml = "^6.0"
python-dotenv = "^1.0.0"
typer = "^0.9.0"
loguru = "^0.7.2"
litellm = "^1.60.2"
tiktoken = "^0.8.0"
pydantic = "^2.0.0"
pytz = "^2025.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=42.0.0", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ai-seo-bot = "main:app"

